# php-src

./: acconfig.h  aclocal.m4  configuration-parser.c  configuration-parser.h  configuration-parser.output  configuration-scanner.c  configure  fopen-wrappers.c  fopen-wrappers.h  generated_lists  php_config.h.in  run-tests.php
TSRM/: Makefile.in  configure.in  tsrm_nw.c  tsrm_virtual_cwd.c  tsrm_virtual_cwd.h  tsrm_win32.c  tsrm_win32.h
Zend/: ChangeLog  FlexLexer.h  Makefile.am  Makefile.in  Zend.m4  ZendTS.dsp  acconfig.h  acinclude.m4  configure.in  flex.skl  zend-parser.c  zend-parser.h  zend-parser.output  zend-scanner-cc.cc  zend-scanner.c  zend.c  zend.h  zend_API.c  zend_API.h  zend_alloc.c  zend_alloc.h  zend_builtin_functions.c  zend_builtin_functions.h  zend_compile.c  zend_compile.h  zend_config.w32.h  zend_constants.c  zend_dynamic_array.h  zend_exceptions.c  zend_execute.c  zend_execute.h  zend_execute_API.c  zend_execute_globals.h  zend_extensions.h  zend_globals.h  zend_hash.c  zend_highlight.c  zend_indent.c  zend_ini.c  zend_ini.h  (+38 more)
autom4te.cache/: output.0  traces.0
dl/: phpdl.h  setup
dl/calendar/: calendar.c  sdncal.h
dl/crypt/: crypt.c
dl/log/: log.c  log.h  log_db.c  log_sql.c
dl/snmp/: php_snmp.h  snmp.c
dl/vmailmgr/: php3_vmailmgr.c
ext/bcmath/: setup.stub
ext/bz2/: bz2.c  config.m4  php_bz2.h
ext/dba/: setup.stub
main/: configuration-parser.c  configuration-parser.h  configuration-parser.output  configuration-scanner.c  fopen-wrappers.c  fopen-wrappers.h  logos.h  php_config.h.in  php_logos.c
win32/: pwd.h
(+191 files in other folders)
