dnl $Id: configure.in,v 1.10 1999/12/17 13:35:04 sascha Exp $
dnl
dnl Minimalistic configure.in for TSRM.
dnl

AC_INIT(TSRM.c)
AM_INIT_AUTOMAKE(TSRM, 1.0)
AM_CONFIG_HEADER(tsrm_config.h)

sinclude(tsrm.m4)
	
TSRM_BASIC_CHECKS
	
AM_PROG_LIBTOOL
if test "$enable_debug" != "yes"; then
  AM_SET_LIBTOOL_VARIABLE([--silent])
fi

TSRM_PTHREAD

AC_OUTPUT(Makefile)
